--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "mongoose": "^6.0.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "vercel": "^23.1.2"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
